--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
@@ -5,9 +5,6 @@
     <Filter Include="echomesh-client">
       <UniqueIdentifier>{5A28992E-2A75-947E-A5C4-A2A2537C5E17}</UniqueIdentifier>
     </Filter>
-    <Filter Include="echomesh-client\base64">
-      <UniqueIdentifier>{689DE205-0857-704A-7424-63A761807F54}</UniqueIdentifier>
-    </Filter>
     <Filter Include="echomesh-client\echomesh">
       <UniqueIdentifier>{3E9758F3-703D-DFA7-9330-BBEC3496F5CF}</UniqueIdentifier>
     </Filter>
@@ -19,6 +16,9 @@
     </Filter>
     <Filter Include="echomesh-client\echomesh\network">
       <UniqueIdentifier>{26D5B416-26CE-A57F-4D1C-7824CD1E4964}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="echomesh-client\base64">
+      <UniqueIdentifier>{689DE205-0857-704A-7424-63A761807F54}</UniqueIdentifier>
     </Filter>
     <Filter Include="echomesh-client\rec">
       <UniqueIdentifier>{51D23AE7-FBB3-8AA4-CF58-BAA70047AFF1}</UniqueIdentifier>
@@ -262,14 +262,17 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\base64\base64.cpp">
-      <Filter>echomesh-client\base64</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\echomesh\base\LightConfig.cpp">
       <Filter>echomesh-client\echomesh\base</Filter>
     </ClCompile>
     <ClCompile Include="..\..\echomesh\base\Log.cpp">
       <Filter>echomesh-client\echomesh\base</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\echomesh\component\Instrument.cpp">
+      <Filter>echomesh-client\echomesh\component</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\echomesh\component\InstrumentGrid.cpp">
+      <Filter>echomesh-client\echomesh\component</Filter>
     </ClCompile>
     <ClCompile Include="..\..\echomesh\component\LightComponent.cpp">
       <Filter>echomesh-client\echomesh\component</Filter>
@@ -288,6 +291,9 @@
     </ClCompile>
     <ClCompile Include="..\..\echomesh\network\SocketLineGetter.cpp">
       <Filter>echomesh-client\echomesh\network</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\base64\base64.cpp">
+      <Filter>echomesh-client\base64</Filter>
     </ClCompile>
     <ClCompile Include="..\..\rec\base\RealTime.cpp">
       <Filter>echomesh-client\rec\base</Filter>
@@ -1311,9 +1317,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\base64\base64.h">
-      <Filter>echomesh-client\base64</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\echomesh\base\Disallow.h">
       <Filter>echomesh-client\echomesh\base</Filter>
     </ClInclude>
@@ -1352,6 +1355,9 @@
     </ClInclude>
     <ClInclude Include="..\..\echomesh\network\SocketLineGetter.h">
       <Filter>echomesh-client\echomesh\network</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\base64\base64.h">
+      <Filter>echomesh-client\base64</Filter>
     </ClInclude>
     <ClInclude Include="..\..\rec\base\ArraySize.h">
       <Filter>echomesh-client\rec\base</Filter>
