--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
@@ -129,15 +129,17 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\base64\base64.cpp"/>
     <ClCompile Include="..\..\echomesh\base\LightConfig.cpp"/>
     <ClCompile Include="..\..\echomesh\base\Log.cpp"/>
+    <ClCompile Include="..\..\echomesh\component\Instrument.cpp"/>
+    <ClCompile Include="..\..\echomesh\component\InstrumentGrid.cpp"/>
     <ClCompile Include="..\..\echomesh\component\LightComponent.cpp"/>
     <ClCompile Include="..\..\echomesh\Main.cpp"/>
     <ClCompile Include="..\..\echomesh\network\LightReader.cpp"/>
     <ClCompile Include="..\..\echomesh\network\LineGetter.cpp"/>
     <ClCompile Include="..\..\echomesh\network\ReadThread.cpp"/>
     <ClCompile Include="..\..\echomesh\network\SocketLineGetter.cpp"/>
+    <ClCompile Include="..\..\base64\base64.cpp"/>
     <ClCompile Include="..\..\rec\base\RealTime.cpp"/>
     <ClCompile Include="..\..\rec\util\thread\Trash.cpp"/>
     <ClCompile Include="..\..\yaml-cpp-src\aliascontent.cpp"/>
@@ -1014,7 +1016,6 @@
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\juce_video.cpp"/>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\base64\base64.h"/>
     <ClInclude Include="..\..\echomesh\base\Disallow.h"/>
     <ClInclude Include="..\..\echomesh\base\Echomesh.h"/>
     <ClInclude Include="..\..\echomesh\base\LightConfig.h"/>
@@ -1028,6 +1029,7 @@
     <ClInclude Include="..\..\echomesh\network\LineQueue.h"/>
     <ClInclude Include="..\..\echomesh\network\ReadThread.h"/>
     <ClInclude Include="..\..\echomesh\network\SocketLineGetter.h"/>
+    <ClInclude Include="..\..\base64\base64.h"/>
     <ClInclude Include="..\..\rec\base\ArraySize.h"/>
     <ClInclude Include="..\..\rec\base\base.h"/>
     <ClInclude Include="..\..\rec\base\BaseNoJuce.h"/>
