--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
@@ -268,7 +268,7 @@
     <ClCompile Include="..\..\echomesh\base\Log.cpp">
       <Filter>echomesh-client\echomesh\base</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\echomesh\component\Instrument.cpp">
+    <ClCompile Include="..\..\echomesh\component\InstrumentComponent.cpp">
       <Filter>echomesh-client\echomesh\component</Filter>
     </ClCompile>
     <ClCompile Include="..\..\echomesh\component\InstrumentGrid.cpp">
@@ -1326,7 +1326,7 @@
     <ClInclude Include="..\..\echomesh\base\Runnable.h">
       <Filter>echomesh-client\echomesh\base</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\echomesh\component\Instrument.h">
+    <ClInclude Include="..\..\echomesh\component\InstrumentComponent.h">
       <Filter>echomesh-client\echomesh\component</Filter>
     </ClInclude>
     <ClInclude Include="..\..\echomesh\component\InstrumentGrid.h">
