Moving toward two-way communication with the client.

--- a/code/cpp/Builds/Linux/Makefile
+++ b/code/cpp/Builds/Linux/Makefile
@@ -53,6 +53,7 @@ OBJECTS := \
   $(OBJDIR)/Log_edbe3e58.o \
   $(OBJDIR)/InstrumentComponent_75edd5bc.o \
   $(OBJDIR)/InstrumentGrid_18eea031.o \
+  $(OBJDIR)/LightingWindow_79bb5b00.o \
   $(OBJDIR)/Main_ed86ae4b.o \
   $(OBJDIR)/LightReader_649349d0.o \
   $(OBJDIR)/LineGetter_4e1cc2f2.o \
@@ -137,6 +138,11 @@ $(OBJDIR)/InstrumentComponent_75edd5bc.o: ../../echomesh/component/InstrumentCom
 $(OBJDIR)/InstrumentGrid_18eea031.o: ../../echomesh/component/InstrumentGrid.cpp
 	-@mkdir -p $(OBJDIR)
 	@echo "Compiling InstrumentGrid.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/LightingWindow_79bb5b00.o: ../../echomesh/component/LightingWindow.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling LightingWindow.cpp"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 
 $(OBJDIR)/Main_ed86ae4b.o: ../../echomesh/Main.cpp
