--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
@@ -274,6 +274,9 @@
     <ClCompile Include="..\..\echomesh\component\InstrumentGrid.cpp">
       <Filter>echomesh-client\echomesh\component</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\echomesh\component\LightingWindow.cpp">
+      <Filter>echomesh-client\echomesh\component</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\echomesh\Main.cpp">
       <Filter>echomesh-client\echomesh</Filter>
     </ClCompile>
