Moving toward command aliases.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -8,6 +8,9 @@
 
 type: config
 
+aliases:
+  save_with_project: false
+
 # Can you remotely request the shutdown and restart of this machine?
 allow_shutdown: true
 
