Fix https://github.com/rec/echomesh/issues/369;  also, add missing RemoveHashtags.py.

--- a/command/master/score/twitter.yml
+++ b/command/master/score/twitter.yml
@@ -15,6 +15,8 @@ search:
                        # You could also just write this:
                        # search: [xyzzy, "#baseball"]
   - "#love"
+  - "#football"
+  - "#soccer"
 
 handler:
   type: print          # Print the twitter to the console.
