Now we're actually starting up an OSC server.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -277,6 +277,7 @@ osc:
   server:
     enable: true
     port: 2222
+    timeout: 0.5
 
 # The permissions area controls whether this machine is allowed to perform
 # the system activities boot, halt, initialize, quit or update.
