Pull up sending client configs.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -267,7 +267,7 @@ logging:
 # The OpenSoundControl protocol named OSC
 osc:
   client:
-    enable: true
+    enable: false
     port: 2222   # The default port for any hosts.
     host: localhost
 
